# aquar.iom

./: .gitignore  README
bots/afk/: afk.cpp  afk.pro
bots/cpp/: cpp_bots.pro
bots/cpp/afk/: afk.cpp  afk.pro
bots/cpp/example/: example.cpp  example.pro
bots/cpp/move_to_corner/: move_to_corner.cpp  move_to_corner.pro
bots/cpp/nearest/: nearest.cpp
bots/cpp/nearest_splitter/: nearest_splitter.cpp  nearest_splitter.pro
bots/cpp/sleeper/: sleeper.cpp
bots/cpp/sonic/: sonic.cpp  sonic.pro
bots/java/afk/: Makefile
bots/java/afk/bots/: Afk.java
bots/java/example/bots/: Example.java
bots/move_to_corner/: move_to_corner.cpp  move_to_corner.pro
bots/nearest/: nearest.cpp  nearest.pro
bots/nearest_splitter/: nearest_splitter.cpp  nearest_splitter.pro
bots/python/: afk.py  coward.py  example.py  nearest_virus_builder.py
bots/sleeper/: sleeper.pro
bots/sonic/: sonic.cpp  sonic.pro
client/: manual_client.py
client/ainetlib16/: CMakeLists.txt  Doxyfile  Doxyfile.in  ainetlib16.cpp  ainetlib16.hpp  jinterface.i  pyinterface.i
doc/: game_design.txt
maps/: map16p.json  map16p600t.json  map2.map  map2p.json  map2p.map  map2p600t.json  map4p.json  map4p600t.json  map8p.json  map8p600t.json
maps/tank/: map1.map
proto/: cell_game_protocol.txt  client_behaviour.dot  client_behaviour_full.dot  protocol.txt
redist/: build_everything.sh  create_redist.sh
server/: cell_game.cpp  cell_game.hpp  cli.cpp  cli.hpp  client.cpp  client.hpp  game.cpp  game.hpp  gameserver.py  logger.cpp  logger.hpp  main.cpp  protocol.hpp  server.cpp  server.hpp  server.pro  tank_game.cpp  tank_game.hpp  tank_map.cpp  tank_map.hpp
visu/: Makefile  cell.cpp  cell.hpp  main.cpp  network.cpp  network.hpp  readme.txt  structures.hpp  visu.cpp  visu.hpp  visu.pro
